src/css/theme-dark.css
[data-btdtheme="dark"].btd__minimal_mode {
  .btn-compose {
    background-color: var(--compose-btn-bg-dark);

    &:hover {
      background-color: var(--compose-btn-bg-dark-hover);
    }
  }

  .app-columns-container {
    background-color: #151515;
  }

  .dropdown-menu {
    border: 1px solid #151515;

    .caret-outer {
      border-bottom: 7px solid rgb(21, 21, 21);
    }

    .caret-inner {
      border-bottom: 6px solid #222426;
    }
  }

  .dropdown-menu li > a,
  .dropdown-menu li > b,
  .typeahead.lst :matches(.fullname, .username, p) {
    color: color(#8899a6 saturation(0%)) !important;
  }

  .typeahead.lst :matches(.fullname, .username, p) {
    color: rgb(193, 193, 193);
  }

  .lst-modal.typeahead {
    box-shadow: none;
  }

  .dropdown-menu .drp-h-divider,
  .typeahead.lst li {
    border-bottom: 1px solid hsla(210, 6%, 18%, 1);
  }

  .dropdown-menu .is-selected,
  .typeahead.lst .s-selected {
    background-color: #151515;
  }

  .dropdown-menu,
  .typeahead {
    background-color: #222426;
  }

  .typeahead {
    border: 0;
  }

  .txt-mute,
  .txt-mute a:not(:hover):not(:focus),
  .tweet-action:not(:hover):not(:focus),
  .tweet-detail-action,
  .dm-action {
    color: color(#8899a6 saturation(0%));
  }

  .js-reply-info-container .txt-mute {
    color: color(#8899a6 saturation(0%) shade(20%));
  }

  .js-app-columns-container .js-column .tweet-timestamp > a {
    background-color: #222426;
    z-index: 1;
    box-shadow: -4px 0 3px #222426;
  }

  .scroll-conversation {
    background: color(#292f33 saturation(0%));
  }

  .account-bio {
    color: color(#8899a6 saturation(0%));
  }

  .attach-compose-buttons .tweet-button {
    background-color: var(--compose-btn-bg-dark-hover);
  }

  .drawer .compose,
  .inline-reply {
    background-color: var(--compose-btn-bg-dark-hover);
  }

  .reply-triangle {
    border-color: transparent transparent var(--compose-btn-bg-dark-hover) transparent;
  }

  .media-caret {
    border-color: #222426 transparent transparent;
  }

  .with-column-divider-bottom {
    border-bottom-color: color(#292f33 saturation(0%));
  }

  .column-message {
    background-color: color(#2e2e2e saturation(0%));
  }
}

